--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<p>A showcase of my skills in Excel, Power BI, SQL, Tableau, Python and R <a href="https://www.linkedin.com/in/ayo-howells-0ab66b1b1">@linkedin</a>
 							</p>
 						<ul class="actions">
-							<li><a href="header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
 					</div>
 
